[package]
name = "canvapress"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1"
multer = "3"
futures = "0.3"
once_cell = "1"

[dev-dependencies]
rand = "0.8"

[[bin]]
name = "canvapress"
path = "src/main.rs"

[[bin]]
name = "canvapress-web"
path = "src/web.rs"
